Fixes component divider top and bottom spacing

--- a/aem-project/ui.apps/src/main/content/jcr_root/etc/clientlibs/bmc/head/style.css
+++ b/aem-project/ui.apps/src/main/content/jcr_root/etc/clientlibs/bmc/head/style.css
@@ -3575,8 +3575,7 @@ span .chatbtn {
 /* Component Divider (not used as a styler, but instead for block component element) */
 .dividers .divider, .dividers .product-landing .layout-secondary, .product-landing .dividers .layout-secondary, .dividers .product-landing .layout-secondary-slim-side, .product-landing .dividers .layout-secondary-slim-side, .dividers .product-landing .layout-secondary-slim-side-grey, .product-landing .dividers .layout-secondary-slim-side-grey, .dividers .product-landing .layout-secondary-cta-container, .product-landing .dividers .layout-secondary-cta-container, .dividers .product-landing .layout-secondary-shaded, .product-landing .dividers .layout-secondary-shaded {
   display: block;
-  margin-top: .75rem;
-  padding-bottom: .75rem; }
+  margin: .75rem 0; }
 
 .layout-full-bleed > .dividers {
   padding: 0 1.25%; }
